# TrafficCapture

./: .gitignore  CMakeLists.txt  http_handler.h  main.cpp  structures.h  traffic_capture.h  traffic_capture_helper.h  user_facade.h
TraficAnalyzer/: CMakeLists.txt  analyzer  log.txt  main  main.cpp  main1  user_facade.h
TraficAnalyzer/facades/: user_facade.cpp  user_facade.h
